# wgtcc

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README-DESKTOP-MJ4N8FR.md  README.md  ast.cc  ast.h  code_gen.cc  code_gen.h  code_gen_old.cc  cpp.cc  cpp.h  cpp.s  encoding.cc  encoding.h  env.cc  env.h  error.cc  error.h  evaluator.cc  evaluator.h  gnu-extension.txt  lexer.cc  lexer.h  main.cc  main.h  mem_pool.h  mem_pool.inc  parser.cc  parser.h  readme.md  scanner.cc  scanner.h  scope.cc  scope.h  string_pair.h  tac.cc  tac.h  (+10 more)
.travis/: after_success.sh  before_install.sh  script.sh
example/: chinese.c  compound_literal.c  heart.c
include/: float.h  iso646.h  stdalign.h  stdarg.h  stdbool.h  stddef.h  stdnoreturn.h  wgtcc.h
optimization/: tac.h
src/: CMakeLists.txt  Makefile  Parser.cpp  Parser.h  ast.cc  ast.cpp  ast.h  code_gen.cc  code_gen.h  cpp.cc  cpp.h  debug.h  decl.h  encoding.cc  env.cc  env.cpp  env.h  error.cc  error.cpp  error.h  evaluator.cc  expr.cpp  expr.h  file.cpp  file.h  lexer.cc  lexer.cpp  lexer.h  main.cc  main.cpp  main.h  mem_pool.h  parser.cc  parser.h  scanner.cc  scanner.h  scope.cc  scope.h  stmt.cpp  stmt.h  (+13 more)
test/: CMakeLists.txt  a.out  add.c  align.c  anonymous.c  arith.c  arr.c  array.c  assign.c  binaryop.c  bitfield.c  bitwiseop.c  cast.c  comp.c  concat.c  cond.c  constant.c  control.c  conversion.c  cpp.c  cpp.h  decl.c  div.c  encode.c  enum.c  expr.c  extern  extern.c  fib.c  flt.c  for.c  func.c  funcargs.c  funcdef.c  function.c  gen.c  generic.c  global.c  hello.c  if.c  (+42 more)
test/bar/: math.h
test/data-structure/: data.txt  graph.c  list.c  list.h  rbtree.c  rbtree.h  rbtree_test.c  test.c  test.h  tree.c  vector.c  vector.h
test/foo/: math.h
vs/wgtcc/: test.c  wgtcc.sln  wgtcc.vcxproj  wgtcc.vcxproj.filters
